# Rhapsody

./: .env.example  .env.oracle.example  .gitignore  Caddyfile  DEMO.md  Dockerfile  Dockerfile.listener  README.md  README.ru.md  alembic.ini  docker-compose.oracle.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  router.py
app/bot/: main.py  services.py  states.py
app/calls/: __init__.py  metrics.py  (+2 more)
docs/: ARCHITECTURE.md  DEMO_CHECKLIST.md  PROJECT.md  PROJECT_ISOLATION.md  TELEGRAM_FLOW.md  VERIFICATION.md
docs-site/: README.md  core-flow.mdx  docs.json  first-memory-question.mdx  openapi.json  package-lock.json  package.json  requirements.mdx  what-is-rhapsody.mdx
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
migrations/: env.py
scripts/: backup-minio.sh  backup-oracle.sh  backup-postgres.sh  check_translations.py  create_telegram_session.py  deploy-oracle.sh  export_openapi.py  localize_docs_site.mjs  register_recorder_account.py  restore-minio.sh  restore-postgres.sh  run-integration-tests.ps1  run_demo_flow.py  sync_docs_en_ru.mjs
tests/: test_ai_byok_routing.py  test_ai_providers.py  test_bot_services.py  test_call_sessions.py  test_config.py  test_document_parsing.py  test_documents.py  test_files.py  test_i18n.py  test_live_listener.py  test_media_understanding.py  test_meeting_intelligence.py  test_memory_prompt.py  test_product_ai.py  test_provider_keys.py  test_rate_limit.py  test_rbac.py  test_redaction.py  test_route_contracts.py  test_scheduling.py  test_security_jwt.py  test_telegram_importance.py  test_worker_pipelines.py
(+202 files in other folders)
