[project]
name = "rhapsody"
version = "0.1.0"
description = "Production-grade Rhapsody backend: Telegram-native AI team memory platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.15.0",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "boto3>=1.35.0",
    "celery[redis]>=5.4.0",
    "cryptography>=43.0.0",
    "fastapi>=0.115.0",
    "faster-whisper>=1.1.1",
    "greenlet>=3.1.0",
    "httpx>=0.27.2",
    "orjson>=3.10.7",
    "pgvector>=0.3.5",
    "prometheus-client>=0.21.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0.35",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
]
listener-session = [
    "py-tgcalls==2.3.3",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.0.1",
    "tgcrypto>=1.2.5",
    "telethon>=1.38.1",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.coverage.run]
branch = true
source = ["app"]
